Update operation ID for each endpoint
